--- a/app/views/robotics/current/farming-type.html
+++ b/app/views/robotics/current/farming-type.html
@@ -35,6 +35,9 @@ What is your project about?
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
+                  hint: {
+                    text: "Select one option"
+                },
 
                   items: [
                 {
