--- a/app/views/slurry/current/start.html
+++ b/app/views/slurry/current/start.html
@@ -35,6 +35,16 @@
           <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
         </ul>
 
+        <div class="govuk-body">
+          <h2 class="govuk-heading-m">Who can apply</h2>
+          <p>You can apply if you:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>are in England</li>
+            <li>own the land the project will be on or have a tenancy for at least 5 years</li>
+            <li>estimate the project costs are over £87,500</li>
+          </ul>
+        </div>
+
         <p><div class="govuk-inset-text">
   If your project is eligible, you can submit your answers to the Rural Payments Agency (RPA) to request the full application form.
 </div></p>
@@ -51,13 +61,36 @@
     </a>
 
     <div class="govuk-body">
-      <h1 class="govuk-heading-m">Before you start</h1>
-      <p>You need:</p>
+      <h3 class="govuk-heading-m">Before you start</h3>
+      <p>To  use the checker,  you need:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>information about your business (for example, number of employees and turnover)</li>
-        <li>information about the project (for example, irrigated land in hectares)</li>
-        <li>estimated total cost of the items you need</li>
+        <li>information about the project (for example, volume of slurry or digestate, the impact the project will have)</li>
+        <li>a list of the items you’d like to buy for the project</li>
+        <li>an estimate of the total cost of the items</li>
       </ul>
+      <p class="govuk-body govuk-!-margin-bottom-8">If you do not enter any information for more than 20 minutes, your
+application will time out and you  will have to start again. </p>
+    </div>
+    <div class="govuk-body">
+      <h3 class="govuk-heading-m govuk-!-margin-top-2">Problems using the online service</h3>
+      <p class="govuk-body">If you have any problems  using the online  service, contact the RPA.</p>
+      <h3 class="govuk-heading-s">Telephone</h3>
+
+      <ul class="govuk-list">
+    <li>Telephone: 03000 200 301</li>
+    <li>Monday to Friday, 9am to 5pm (except public holidays)</li>
+    </ul>
+    <p class="govuk-body">
+    <a class="govuk-link" href="#">Find out about call charges</a>
+    </p>
+
+    <h3 class="govuk-heading-s">Email</h3>
+
+    <ul class="govuk-list">
+    <li><a class="govuk-link" href="#">FTF@rpa.gov.uk</a></li>
+
+    </ul>
     </div>
   </div>
 </div>
