--- a/app/views/robotics/current/answers.html
+++ b/app/views/robotics/current/answers.html
@@ -119,7 +119,9 @@
         <tr class="govuk-table__row">
           <th scope="row" class="govuk-table__header">Agricultural sector
             <br/><br/><ul class="govuk-!-font-size-16 govuk-list govuk-list--bullet">
-              <li>{{data['agricultural-sector'] | capitalize}} </li>
+              {% for item in data['agricultural-sector'] %}
+              <li>{{ item | capitalize }}</li>
+              {% endfor %}
             </ul></th>
             <td class="govuk-table__cell">Strong</td>
             <td class="govuk-table__cell">
