--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -26,7 +26,7 @@
 <h3 class="govuk-heading-s">Slurry treatment equipment</h3>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
-      <li>mild acidification equipment such as acid storage, dosing equipment, mixing tank and pump </li>
+      <li>mild acidification equipment (all projects must buy acid storage, dosing equipment, mixing tank and pump) </li>
       <li>acidification infrastructure (any work to adapt or install pipework, pumps etc to get slurry into the acidification system and then out to storage)</li>
     </ul>
 
@@ -82,7 +82,7 @@
 <p>You’ll need:</p>
 <ul>
   <li>information about your business (for example, number of employees, turnover)</li>
-  <li>information about the project (for example, volume of slurry or digestate)</li>
+  <li>information about the project (for example, volume of slurry or digestate, the project impact)</li>
   <li>a list of the items you’d like to buy for the project</li>
   <li>an estimate of the total cost of the items</li>
 </ul>
@@ -100,11 +100,9 @@
 <p class="call-to-action"><a href="start" class="govuk-link--no-visited-state">Check if your project can apply for a grant.</a></p>
 
 <h3>Submit a full application</h3>
-<p>The RPA will be in touch once the application period opens.</p>
-<p>They will tell you if your project scored well enough to get the full application form.</p>
-<p>Value for money will be assessed alongside the funding priorities at full application stage and this may impact your overall project score.</p>
-<p>The likelihood of a full application being successful will also depend on the number and value of applications we receive.</p>
-<p>If you submit a full application and it is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
+<p>The RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form.</p>
+<p>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</p>
+<p>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
 <br/>
 
