--- a/app/views/robotics/current/other-robotic-fail2.html
+++ b/app/views/robotics/current/other-robotic-fail2.html
@@ -34,7 +34,7 @@
 
 
             <form class="form" action="{{ nextUrl }}" method="post">
-              <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
+              <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue with eligible items</button>
             </form>
 
       </div>
