--- a/app/views/robotics/current/other-robotic-conditional.html
+++ b/app/views/robotics/current/other-robotic-conditional.html
@@ -22,19 +22,23 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-body govuk-!-font-size-48">
         <h1 class="govuk-heading-l">
-          You may be able to apply for a grant from this scheme
+          Your other robotic equipment might get a grant from this scheme
         </h1>
 
-        <p>RPA will assess your item and whether they can fund it.</p>
-        <p>They will let you know if the item is eligible before the application window opens and projects are invited to apply.   </p>
+        <p class="govuk-body">RPA will assess your item and whether they can fund it.  </p>
 
-        <div class="govuk-warning-text">
-  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-  <strong class="govuk-warning-text__text">
-    <span class="govuk-warning-text__assistive">Warning</span>
-    There’s no guarantee your item will be funded.
-  </strong>
-</div>
+  <p class="govuk-body">They will let you know if the item is eligible before the application window opens and projects are invited to apply.  <p>
+
+
+
+                    <div class="govuk-warning-text">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+              <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                There’s no guarantee your item will be funded.
+              </strong>
+            </div>
+
 
             <form class="form" action="{{ nextUrl }}" method="post">
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
