--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -109,7 +109,7 @@
         </h2>
 
           <p class='govuk-list app-list--definition'>
-            <a href='https://app.mural.co/invitation/mural/ftfgrants4310/1626122410966?sender=uac8e5181797d9857544e5168&key=0647d951-2455-4d53-839e-a946509fbd86' class="govuk-link--no-visited-state" target="new">High fidelity screenflow on Mural</a><br>
+            <a href='https://app.mural.co/t/dcxuk3892/m/ftfgrants4310/1626110810024/185f9759f0ba83b4513012d6b47958ecad7c2fe4?sender=uac8e5181797d9857544e5168' class="govuk-link--no-visited-state" target="new">High fidelity screenflow on Mural</a><br>
                  Last updated on 18 August 2021.<br></p>
 
           <p class='govuk-list app-list--definition'>
