Robotics and Slurry changes

--- a/app/views/robotics/current/check-details.html
+++ b/app/views/robotics/current/check-details.html
@@ -97,7 +97,7 @@
 
           </dt>
           <dd class="govuk-summary-list__value">
-          {{ data['enter-sbi'] if data['sbi-radio'] == 'Yes' else 'No' }}
+          {{ data['sbi'] }}
           </dd>
           <dd class="govuk-summary-list__actions">
 
