--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -49,7 +49,7 @@
             <div class="govuk-character-count" data-module="govuk-character-count" data-maxwords="60">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="label-as-page-heading">
-                  Enter your item
+                  Enter your item, including the name, a brief description and the benefit to the farm
                 </label>
                 <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="other-robotic-item" rows="10" aria-describedby="word-count-info">{{ data['other-robotic-item'] }}</textarea>
               </div>
