--- a/app/views/robotics/current/project-start.html
+++ b/app/views/robotics/current/project-start.html
@@ -44,7 +44,7 @@ Have you already started work on the project?
                     Yes, we have begun project work
                     </label>
                     <div id="sign-in-2-item-hint" class="govuk-hint govuk-radios__hint">
-                      For example digging, signing contracts, placing orders
+                      For example, digging, signing contracts, placing orders
                     </div>
                   </div>
                   <div class="govuk-radios__item">
