--- a/app/views/robotics/current/reference-number.html
+++ b/app/views/robotics/current/reference-number.html
@@ -65,7 +65,7 @@
       <p class="govuk-body">Before you start the project, you can:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>get quotes from suppliers</li>
-          <li>apply for planning permission or an abstraction licence</li>
+          <li>apply for planning permission</li>
         </ul>
       <p><a href="#" class="govuk-link">What do you think of this service?</a></p>
 
