--- a/app/views/slurry/current/guidance.html
+++ b/app/views/slurry/current/guidance.html
@@ -35,10 +35,11 @@
     <ul>
       <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, egg-handling robots, advanced ventilation controls)</li>
       <li>robotic or innovative animal welfare equipment (for example, robotic milking)</li>
-      <li>innovative LED lighting equipment (for example, wavelength-controlled LED lighting for crop and livestock production)</li>
+      <li>innovative LED lighting equipment (for example, wavelength-specific LED lighting for crop and livestock production)</li>
     </ul>
 
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
+<p>If you want to apply for both a slurry project and a robotics project, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
 
 <h2 id="when-to-apply">When to apply</h2>
 <table class="govuk-table govuk-body">
