--- a/app/views/robotics/current/business.html
+++ b/app/views/robotics/current/business.html
@@ -62,42 +62,22 @@
           </div>
         </div>
         <br>
-<!--Conditional SBI field starts'-->
              <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" aria-describedby="sbi-hint">
-                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                     <legend class="govuk-fieldset__legend">
                        <h1 class="govuk-fieldset__heading">
                          Single Business Identifier (SBI)
                        </h1>
                      </legend>
                      <div id="contact-hint" class="govuk-hint">
-                       If you don't have an SBI, you can still apply.<br>Select one option
+                       If you don't have an SBI, you can still apply
                      </div>
+                      <input class="govuk-input govuk-!-width-one-third" id="sbi" name="sbi" type="text" spellcheck="false" aria-describedby="sbi-hint" pattern="[0-9]*" inputmode="numeric" value="{{ data['sbi'] }}">
+                    </div>
 
-                 <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
-                   <div class="govuk-radios__item">
-                     <input class="govuk-radios__input" id="sbi-yes" name="sbi-radio" type="radio" value="Yes" data-aria-controls="conditional-sbi"{{ checked("sbi-radio", "Yes") }}>
-                     <label class="govuk-label govuk-radios__label" for="sbi-yes">
-                       Yes
-                     </label>
-                   </div>
-                   <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-sbi">
-                     <div class="govuk-form-group">
-                       <label class="govuk-label" for="sbi">
-                         SBI number
-                       </label>
-                       <input class="govuk-input govuk-!-width-one-third" id="enter-sbi2" name="enter-sbi" pattern="[0-9]*" inputmode="numeric" value="{{ data['enter-sbi'] }}"></div>
-                   </div>
-                   <div class="govuk-radios__item">
-                     <input class="govuk-radios__input" id="sbi-no" name="sbi-radio" type="radio" value="No" data-aria-controls="conditional-contact-2" {{ checked("sbi-radio", "No") }}>
-                     <label class="govuk-label govuk-radios__label" for="sbi-no">
-                       No
-                     </label>
-                   </div>
-
-               </fieldset>
+                     </div>
+ </fieldset>
              </div>
-<!--Conditional SBI field ends'-->
     <br><br>
         <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
           Continue
