--- a/app/views/slurry/current/consent.html
+++ b/app/views/slurry/current/consent.html
@@ -37,6 +37,14 @@
           </div>
       </fieldset>
     </div>
+
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        You can only submit your details once
+      </strong>
+    </div>
     <form class="form" action="{{ nextUrl }}" method="post">
       <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
         Confirm and send
