--- a/app/views/slurry/current/farmer-details.html
+++ b/app/views/slurry/current/farmer-details.html
@@ -41,10 +41,14 @@
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Contact details</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-email">
-              Email address
-              <div id="event-name-hint" class="govuk-hint">
-                  We'll only use this to send you confirmation
-              </div>
+            Email address
+            <div id="event-name-hint" class="govuk-hint">
+            {% if data['applicant'] === "Agent" %} We'll only use this to send them confirmation
+                       {% else %}
+                       We'll only use this to send you confirmation
+                       {% endif %}
+            </div>
+
           </label>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-email" name="farmer-email" type="farmer-email" spellcheck="false" aria-describedby="farmer-email-hint" autocomplete="farmer-email" value="{{ data['farmer-email'] }}">
         </div>
@@ -54,7 +58,10 @@
               Mobile number
           </label>
           <div id="landline-name-hint" class="govuk-hint">
-              We will only use this to contact you about your application
+            {% if data['applicant'] === "Agent" %} We will only use this to contact them about their application
+                       {% else %}
+                       We will only use this to contact you about your application
+                       {% endif %}
           </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-landline" name="farmer-landline" type="farmer-landline" spellcheck="false" aria-describedby="farmer-landline-hint" autocomplete="farmer-landline" value="{{ data['farmer-landline'] }}">
         </div>
@@ -64,7 +71,10 @@
               Landline number
           </label>
           <div id="landline-name-hint" class="govuk-hint">
-              We will only use this to contact you about your application
+            {% if data['applicant'] === "Agent" %} We will only use this to contact them about their application
+                       {% else %}
+                       We will only use this to contact you about your application
+                       {% endif %}
           </div>
           <input class="govuk-input  govuk-!-width-two-thirds" id="farmer-mobile" name="farmer-mobile" type="farmer-mobile" spellcheck="false" aria-describedby="farmer-mobile-hint" autocomplete="farmer-mobile" value="{{ data['farmer-mobile'] }}">
         </div>
