--- a/app/views/robotics/current/project-cost.html
+++ b/app/views/robotics/current/project-cost.html
@@ -51,7 +51,7 @@
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            RPA will assess your other robotic equipment item and whether they can fund it.<br/><br/>There’s no guarantee your item will be funded.
+            RPA will assess your other robotic equipment item and whether they can fund it.<br/>There’s no guarantee your item will be funded.
           </strong>
         </div>
         {% endif %}
