--- a/app/views/slurry/current/applying.html
+++ b/app/views/slurry/current/applying.html
@@ -12,7 +12,7 @@
     },
       html: 'This is a prototype. It is not a real service.'
   }) }}
-  
+
   <a class="govuk-back-link" href="{{ backUrl }}">Back</a>
 {% endblock %}
 
@@ -33,7 +33,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="Farmer" {{ checked("applicant", "Farmer") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-1">
-                  Farmer
+                  Farmer or contractor
                 </label>
               </div>
               <div class="govuk-radios__item">
