--- a/app/views/slurry/current/farmer-details.html
+++ b/app/views/slurry/current/farmer-details.html
@@ -21,7 +21,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       <form class="form" id="mainForm" action="{{ nextUrl }}" method="post">
-        <h1 class="govuk-heading-l"> Farmer's details</h1>
+        <h1 class="govuk-heading-l"> Farmer or contractor's details</h1>
         <h2 class="govuk-heading-m govuk-!-padding-top-6 govuk-!-padding-bottom-2">Name</h2>
         <div class="govuk-form-group">
           <label class="govuk-label" for="farmer-firstname">
@@ -96,7 +96,7 @@
 
         <div class="govuk-form-group">
             <label class="govuk-label" for="farmer-town">
-                Town (optional)
+                Town 
             </label>
             <input class="govuk-input govuk-!-width-one-half" id="farmer-town" name="farmer-town" type="farmer-town" spellcheck="false" aria-describedby="farmer-town-hint" autocomplete="farmer-town" value="{{ data['farmer-town'] }}">
         </div>
