--- a/app/views/slurry/current/farming-type.html
+++ b/app/views/slurry/current/farming-type.html
@@ -35,7 +35,7 @@ What is your project about?
                       }
                   },
                   hint: {
-                    text: "Select one option"
+                    html: "If you want to apply for both a slurry project and a robotics project, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.<br><br>Select one option"
                 },
 
                   items: [
