--- a/app/views/slurry/current/legal-status.html
+++ b/app/views/slurry/current/legal-status.html
@@ -24,7 +24,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What is the legal status of the farm business?
+                What is the legal status of the business?
               </h1>
             </legend>
             <br><br>
