--- a/app/views/index.html
+++ b/app/views/index.html
@@ -36,12 +36,12 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="slurry">Productivity grant - Slurry</a>
         </td>
-      <td class="govuk-table__cell">Eligibility checker (v2 - last updated on 9 September)</td>
+      <td class="govuk-table__cell">Checker (v2.4 - last updated on 17 September 2021)</td>
     </tr>
     <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="robotics">Productivity grant - Robotics and innovation</a>
         </td>
-      <td class="govuk-table__cell">Eligibility checker (v2 - last updated on 9 September)</td>
+      <td class="govuk-table__cell">Checker (v3 - last updated on 17 September 2021)</td>
     </tr>
   </tbody>
 </table>
