--- a/app/views/robotics/current/applying.html
+++ b/app/views/robotics/current/applying.html
@@ -34,7 +34,7 @@
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="Farmer" {{ checked("applicant", "Farmer") }}>
                 <label class="govuk-label govuk-radios__label" for="applicant-1">
-                  Farmer
+                  Farmer or contractor
                 </label>
               </div>
               <div class="govuk-radios__item">
