--- a/app/views/robotics/current/check-details.html
+++ b/app/views/robotics/current/check-details.html
@@ -145,7 +145,16 @@
             {{data['agent-firstname']}} {{data['agent-lastname']}}
           </dd>
           <dd class="govuk-summary-list__actions">
-
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
+            Business name
+          </dt>
+          <dd class="govuk-summary-list__value">
+            {{data['agent-business']}}
+          </dd>
+          <dd class="govuk-summary-list__actions">
           </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -186,7 +195,7 @@
         <tr class="govuk-table__row">
             <div class="govuk-summary-list__row--no-border">
                 <dt class="govuk-summary-list__key">
-                    <p class="govuk-heading-m"><strong>Farmer's details</strong></p>
+                    <p class="govuk-heading-m"><strong>Farmer or contractor's details</strong></p>
                 </dt>
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link govuk-body" href="farmer-details">
