--- a/app/views/robotics/index.html
+++ b/app/views/robotics/index.html
@@ -16,7 +16,6 @@
   Robotics prototype admin
 </h1>
 
-
       <div class="proto-admin">
         <h2 class="govuk-heading-l">User research</h2>
 
@@ -31,24 +30,24 @@
           User will receive a confirmation email, with their answers. Service is routed by GOV Notify.</p>
       </div>
 
-
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
-                  <p class='govuk-heading-m'>Version 2.3 (current)</p>
-                    <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in 3rd round of usability testing.<br>
-                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 9 September 2021<br/>
+                  <p class='govuk-heading-m'>Version 3 (current)</p>
+                    <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in testing for 'contracting changes'.<br>
+                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 17 September 2021<br/>
                       </span></p>
 
 
+                      <p class='govuk-heading-m'>Previous versions</p>
+                        <p class='govuk-list app-list--definition'>
+                          <a href='/robotics/v2/guidance' class="govuk-link--no-visited-state">Version 2.4</a><br>
+                            Robotics iterations based on usability testings concluded between 21 August 2021 and 17 September 2021.</p>
 
-                          <p class='govuk-heading-m'>Previous versions</p>
+
                             <p class='govuk-list app-list--definition'>
                               <a href='/robotics/v1/guidance' class="govuk-link--no-visited-state">Version 1</a><br>
                                 Robotics baseline design, tested in our 1st round of usability testing between 15 July 2021 and 20 August 2021.</p>
-
       </div>
-
-
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Journeys and wireframes</h2>
             <p class='govuk-heading-m'>Workflows, screenflows and user journeys</p>
