--- a/app/views/robotics/index.html
+++ b/app/views/robotics/index.html
@@ -20,7 +20,7 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='/robotics/current/guidance' class="govuk-link--no-visited-state">Guidance: Farming Transformation Fund productivity grant</a></p>
+        <a href='/robotics/current/guidance2' class="govuk-link--no-visited-state">Guidance: Farming Transformation Fund productivity grant</a></p>
           <p class='govuk-list app-list--definition'>
             <a href='/robotics/current/start' class="govuk-link--no-visited-state">Start page</a><br>
             Specialist start page, hosted on GOV.UK</p>
@@ -32,9 +32,9 @@
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
-                  <p class='govuk-heading-m'>Version 3 (current)</p>
-                    <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in testing for 'contracting changes'.<br>
-                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 17 September 2021<br/>
+                  <p class='govuk-heading-m'>Version 3.1 (current)</p>
+                    <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in testing for 'contractor changes' and new 'guidance page' changes.<br>
+                      <span class="govuk-body govuk-!-font-size-14"># Last updated on 22 September 2021<br/>
                       </span></p>
 
 
