--- a/app/views/slurry/index.html
+++ b/app/views/slurry/index.html
@@ -17,7 +17,7 @@
     <p>The Farming Investment Fund will provide support for eligible applicants to invest in their businesses to improve productivity, profitability and enhance environmental sustainability.</p>
 
     <h2 class="govuk-heading-m">
-      Version 2.4
+      Version 2.5
     </h2>
 
     <h3 class="govuk-heading-s">Changes</h3>
@@ -44,13 +44,13 @@
 
 
     <h3 class="govuk-heading-s">Research notes</h3>
-    <p>We have now finalized our last round of usability testing. Last updated on 17 September 2021.</p>
+    <p>We have now finalized our last round of usability testing. Last updated on 22 September 2021.</p>
 
     <p><a href="https://capgemini.sharepoint.com/:p:/r/sites/FutureFarming/_layouts/15/Doc.aspx?sourcedoc=%7BC1C3BCD1-628B-4688-886C-D373C4B0C51E%7D&file=Slurry%20Usability%20Testing%202021.pptx&action=edit&mobileredirect=true&wdPreviousSession=adc45c79-b0d8-415b-95ad-b57dafcf5e2c&wdOrigin=TEAMS-ELECTRON.teams.undefined" class="govuk-link--no-visited-state" target="new">View user research report (opens in new tab)</a>.<p>
 
     {{ govukButton({
       text: 'View prototype',
-      href: '/slurry/current/guidance'
+      href: '/slurry/current/guidance2'
     }) }}
 
 
@@ -72,6 +72,7 @@
           <li>Acidification infrastructure and slurry pipework merged as one option with hint text​</li>
           <li>  Hint text for ‘Mild acidification equipment’ was also changed to ‘You must buy...’​</li>
         </ul>
+        <ul class="govuk-list govuk-list--bullet">
       <li><a href="/slurry/current/low-emission" class="govuk-link--no-visited-state">Slurry application page</a></li>
       New question added in: 'Will you be using low-emission precision application equipment?'
       </ul>
