--- a/app/views/robotics/current/agricultural-sector.html
+++ b/app/views/robotics/current/agricultural-sector.html
@@ -83,7 +83,7 @@ Agricultural sector
               <p>RPA wants to fund sectors that:</p>
               <ul class="govuk-list govuk-list--bullet">
                   <li>have significant labour shortages</li>
-                  <li>have not received many grants in the past</li>
+                  <li>have not received many grants in the past, such as dairy</li>
                   </ul>
 
           </div>
