--- a/app/views/robotics/current/guidance2.html
+++ b/app/views/robotics/current/guidance2.html
@@ -8,66 +8,46 @@
   <div class="gem-c-govspeak govuk-govspeak " data-module="govspeak">
     <p class="govuk-body">The Farming Investment Fund (FIF) provides grants to improve productivity and bring environmental benefits. FIF is made up of 2 separate funds:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>the Farming Equipment and Technology Fund</li>
-        <li>the Farming Transformation Fund</li>
+        <li>Farming Equipment and Technology Fund (for grants between £2,000 and £25,000)</li>
+        <li>Farming Transformation Fund (for grants between £35,000 and £500,000)</li>
       </ul>
     <h2 id="farming-equipment-technology-fund" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-36">Farming Equipment and Technology Fund</h2>
-      <p class="govuk-body">This fund provides grants towards the cost of equipment and technology, for example horticulture, forestry, livestock and resource management, to improve the productivity of farms in a sustainable way.</p>
+      <p class="govuk-body">This fund provides grants towards the cost of equipment and technology to improve the productivity of farms in a sustainable way.</p>
     <h3 class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-24">How to apply</h3>
       <p class="govuk-body">Round 1 applications open on 1 March 2022 and close at 31 May 2022. Read the <a href="#" class="govuk-link">FETF Round 1 manual</a> for full details about who is eligible and what you can get funding for before you apply.</p>
       <p class="call-to-action"><a href="#" class="govuk-link--no-visited-state">Apply now for an FETF grant</a></p>
     <h3 class="govuk-heading-s">If you have any questions</h3>
       <p class="govuk-body">Email <a href="#" class="govuk-link">FETFEnquiries@rpa.gov.uk</a> or call the RPA helpline on 03000 200 301 and select the option for the Farming Equipment & Technology Fund. </p>
     <h2 id="farming-transformation-fund" class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-36">Farming Transformation Fund</h2>
-      <p class="govuk-body">This fund provides grants towards large capital items to help businesses improve productivity, profitability, and environmental sustainability. There are 3 types of grant available from the Farming Transformation Fund. They are:</p>
+      <p class="govuk-body">This fund provides grants towards large capital items to help businesses improve productivity, profitability, and environmental sustainability. They are:</p>
+      <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>Water Management – open now for application</li>
-          <li>Improving Farm Productivity – open later this year for applications</li>
-          <li>Adding Value – open early 2022 for applications</li>
+          <li>Water Management</li>
+          <li>Improving Farm Productivity</li>
+          <li>Adding Value</li>
         </ul>
 
     <h2 class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-24">Water Management grant</h2>
-      <p class="govuk-body">Apply online for funding towards capital items for:</p>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>the efficient use of water for irrigation</li>
-          <li>constructing on-farm reservoirs to improve water supplies for crop irrigation</li>
-          <li>adopting best practice irrigation application equipment</li>
-        </ul>
-    <h3 class="govuk-heading-s">How to apply</h3>
-      <p class="govuk-body">Use the <a href="/water/current/guidance" class="govuk-link govuk-link--no-visited-state">Water Management online checker tool</a> to find out if you can apply for this grant.</p>
-      <p class="govuk-body">Read the <a href="#" class="govuk-link">Farming Transformation Fund Water Management grant manual</a>.</p>
-
+      <p class="govuk-body">Read the guidance and use the <a href="/water/current/guidance" class="govuk-link govuk-link--no-visited-state">Water Management online checker tool</a> to find out if you can apply for this grant.</p>
+      <div class="govuk-inset-text">
+        Open now for application
+      </div>
     <h2 class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-24">Improving Farm Productivity grant</h2>
-      <p class="govuk-body">Apply online for funding towards capital items for:</p>
-      <h3 class="govuk-heading-m">Slurry treatment equipment</h3>
-        <ul class="govuk-list govuk-list--bullet">
-          <li>mild acidification equipment (all projects must buy acid storage, dosing equipment, mixing tank and pump)</li>
-          <li>acidification infrastructure (any work to adapt or install pipework, pumps etc to get slurry into the acidification system and then out to storage)</li>
-        </ul>
-      <h3 class="govuk-heading-m">Robotics and innovation equipment</h3>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>robotic or innovative horticulture and arable equipment (for example, robotic planter, robotic weeding, egg-handling robots, advanced ventilation controls)</li>
-            <li>robotic or innovative animal welfare equipment (for example, robotic milking)</li>
-            <li>innovative LED lighting equipment (for example, wavelength-specific LED lighting for crop and livestock production)</li>
-          </ul>
-      <h3 class="govuk-heading-s">How to apply</h3>
-        <p class="govuk-body">Use the <a href="/robotics/current/guidance" class="govuk-link govuk-link--no-visited-state">Improving Farm Productivity online checker</a> to find out if you can apply for this grant.</p>
-        <p class="govuk-body">Read the <a href="#" class="govuk-link">Farming Transformation fund Improving Farm Productivity grant manual</a>.</p>
-
-      <h2 class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-24">Adding Value grant</h2>
-        <p class="govuk-body">Apply online for funding towards capital items for:</p>
-          <ul class="govuk-list govuk-list--bullet">
-            <li>bullet point one</li>
-            <li>bullet point 2</li>
-            <li>bullet point 3</li>
-          </ul>
-      <h3 class="govuk-heading-s">How to apply</h3>
-        <p class="govuk-body">Use the <a href="#" class="govuk-link govuk-link--no-visited-state">Adding Value online checker tool</a> to find out if you can apply for this grant.</p>
-        <p class="govuk-body">Read the <a href="#" class="govuk-link">Farming Transformation Fund Adding Value grant manual</a>.</p>
+      <p class="govuk-body">Read the guidance and use the <a href="/robotics/current/guidance" class="govuk-link govuk-link--no-visited-state">Improving Farm Productivity online checker</a> to find out if you can apply for this grant.</p>
+<div class="govuk-inset-text">
+Open later this year for applications
+</div>
+    <h2 class="govuk-!-font-weight-bold govuk-body govuk-!-font-size-24">Adding Value grant</h2>
+       <p class="govuk-body">Read the guidance and use the <a href="#" class="govuk-link govuk-link--no-visited-state">Adding Value online checker tool</a> to find out if you can apply for this grant.</p>
+<div class="govuk-inset-text">
+Open early 2022 for applications
+</div>
     </div>
             <br>
             <h3 class="govuk-heading-m">What happens next</h3>
             <p class="govuk-body">RPA will assess the information you submit. If your project is suitable, you will be asked to submit a full application.</p>
+            <P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Improving Farm Productivity grant manual before you submit an application.</a></p>
+              <br>
             <h4 class="govuk-heading-s">If you have any questions</h4>
             <p class="govuk-body">Email <a href="#" class="govuk-link">FTF@rpa.gov.uk</a> or call RPA on 03000 200301 and select the option for the Farming Transformation Fund.</p>
 
