--- a/app/views/robotics/current/other-robotic-equipment.html
+++ b/app/views/robotics/current/other-robotic-equipment.html
@@ -34,7 +34,7 @@
           <ul class="govuk-list govuk-list--bullet govuk-hint">
             <li>have a sensing system</li>
             <li>have a decision-making capability</li>
-            <li>use actuators</li>
+            <li>use actuators (the devices that move robot joints)</li>
           </ul>
         </p>
        </div>
@@ -81,7 +81,7 @@
 
         <li>have a sensing system</li>
         <li>have a decision-making capability</li>
-        <li>use actuators</li>
+        <li>use actuators (the devices that move robot joints)</li>
       </ul>
 
   </div>
