--- a/app/views/robotics/current/views/layouts/GUIDANCEROBOTICS2.html
+++ b/app/views/robotics/current/views/layouts/GUIDANCEROBOTICS2.html
@@ -68,7 +68,7 @@ Farming Investment Fund
       </h1>
     </div>
 
-    <p class="gem-c-lead-paragraph">Information for farmers, foresters, growers and contractors about grants for investing in new technology and equipment, who is eligible and how to apply. </p>
+    <p class="gem-c-lead-paragraph">Information for farmers, foresters, growers and contractors about grants for investing in new technology and equipment. </p>
 
   </div>
 </div>
