--- a/app/views/robotics/current/wider-farming.html
+++ b/app/views/robotics/current/wider-farming.html
@@ -29,7 +29,7 @@ Have you already started work on the project?
           </h1>
         </legend>
         <div id="wider-farming" class="govuk-hint">
-          Software automating data analysis to improve efficiency
+          Software automating data analysis to improve efficiency (for example, analysing white blood cell counts in dairy)
         </div>
         <div class="govuk-radios">
           <div class="govuk-radios__item">
